# telegram-digest

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_web_admin.py
src/tgdigest/: __init__.py  __main__.py  app.py  container.py  logging.py  util.py
src/tgdigest/cli/: __init__.py  main.py
src/tgdigest/config/: __init__.py  settings.py
src/tgdigest/db/: __init__.py  base.py  enums.py  models.py
src/tgdigest/db/repositories/: __init__.py  analysis.py  base.py  chats.py  dialogs.py  digests.py  errors.py  messages.py  prompts.py  requests.py
src/tgdigest/llm/: __init__.py  base.py  claude.py  errors.py  factory.py  json_utils.py  ollama.py  openai_compatible.py  retry.py  tokens.py
src/tgdigest/prompts/: global_digest.md  global_system.md  stage1_instructions.md  stage2_instructions.md
src/tgdigest/scheduling/: __init__.py  scheduler.py  triggers.py
src/tgdigest/summarization/: __init__.py  jsonio.py  preprocess.py  prompts.py  render.py  schemas.py  service.py  stage1_importance.py  stage2_digest.py
src/tgdigest/telegram/: __init__.py  client.py  dialogs.py  flood.py  ingest.py  mapper.py  sender.py
src/tgdigest/web/: __init__.py  app.py  auth.py  routes.py
src/tgdigest/web/templates/: base.html  chat_detail.html  dialogs.html  digest_detail.html  digests.html  errors.html  index.html  login.html  runs.html
tests/: conftest.py  test_cli_offline.py  test_daemon_jobs.py  test_json_utils.py  test_llm_providers.py  test_mapper.py  test_preprocess.py  test_prompts.py  test_render.py  test_repositories.py  test_scheduler.py  test_schemas.py  test_service.py  test_tokens.py  test_triggers.py  test_web.py  test_web_repos.py
