[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgdigest"
version = "0.1.0"
description = "Self-hosted Telegram chat monitoring with LLM-powered importance digests"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TelegramDigest" }]
dependencies = [
    "telethon>=1.36,<2",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "tenacity>=8.3",
    "structlog>=24.1",
    "typer>=0.12",
    "python-dateutil>=2.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
openai = ["tiktoken>=0.7"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "aiosqlite>=0.20",
    "ruff>=0.5",
    "mypy>=1.10",
]
test-integration = ["testcontainers[postgresql]>=4.5"]

[project.scripts]
tgdigest = "tgdigest.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tgdigest = ["prompts/*.md"]
"tgdigest.web" = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "ASYNC"]
ignore = [
    "B008",   # typer uses function calls in argument defaults
    "RUF001", # ambiguous unicode in strings — false positives on Cyrillic
    "RUF002", # ambiguous unicode in docstrings — false positives on Cyrillic
    "RUF003", # ambiguous unicode in comments — false positives on Cyrillic
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "C408", "B011"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
packages = ["tgdigest"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["telethon.*", "apscheduler.*", "tiktoken.*", "dateutil.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require external services (Postgres via testcontainers)",
]
